<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:scaleX="1.64"
        android:scaleY="1.64"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <LinearLayout
        android:id="@+id/ll_scores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_score_panel"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/ll_best_score"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/tv_current_score"
            android:textColor="@color/colorTextLow" />

        <TextView
            android:id="@+id/tv_current_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:text="@string/no_score"
            android:textColor="@color/colorTextDark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_best_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_score_panel"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_scores"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_best_score_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/tv_best_score"
            android:textColor="@color/colorTextLow" />

        <TextView
            android:id="@+id/tv_best_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:text="@string/no_score"
            android:textColor="@color/colorTextDark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:text="@string/btn_option"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:backgroundTint="@color/colorWhite"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/ll_best_score"
        app:layout_constraintTop_toBottomOf="@+id/ll_best_score" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <com.example.game2048.view.GameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />


    <android.gesture.GestureOverlayView
        android:id="@+id/gesture_overlay_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:fadeOffset="666"
        android:gestureColor="@android:color/transparent"
        android:gestureStrokeAngleThreshold="160"
        android:gestureStrokeType="multiple"
        android:uncertainGestureColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_view" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_white"
        android:text="@string/btn_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>
